bk_ida/gccida/g0/cse_around_loop
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cse_around_loop/src/cse.c:7012:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insn = ( rtx)loop_start[1]; insn && *( _WORD *)insn == 37 && insn[2].fld[0].rtint >= 0; insn = ( rtx)insn[1] ) 
                   ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cse_around_loop/src/cse.c:7012:108: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insn = ( rtx)loop_start[1]; insn && *( _WORD *)insn == 37 && insn[2].fld[0].rtint >= 0; insn = ( rtx)insn[1] ) 
                                                                                                           ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cse_around_loop/src/cse.c:7028:35: error: use of undeclared identifier 'machine_mode'
invalidate( p->exp->fld[0].rtx, ( machine_mode)*( ( unsigned __int8 *)p->exp + 2)); 
                                  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/cse_around_loop/src/obj/cse.o] Error 1
